HomeComponent and CRUD initiated

--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -5,7 +5,7 @@
             ">
                 home
             </i>
-            My Library
+            My Bookstore
         </a>
     </span>
 </mat-toolbar>
