--- a/src/app/components/templates/nav/nav.component.html
+++ b/src/app/components/templates/nav/nav.component.html
@@ -5,7 +5,7 @@
                 <i class="material-icons">home</i>
                 Home
             </a>
-            <a mat-list-item routerLink="/products">
+            <a mat-list-item routerLink="/categories">
                 <i class="material-icons">category</i>
                 Categories
             </a>
