--- a/src/app/views/category/category-read/category-read.component.html
+++ b/src/app/views/category/category-read/category-read.component.html
@@ -1,1 +1,36 @@
-<p>category-read works!</p>
+<div class="content">
+
+  <button class="button" mat-stroked-button color="primary">create new category</button>
+  
+  <div class="mat-elevation-z8 content-table">
+    <table class="table" mat-table [dataSource]="categories">
+      
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef >Id</th>
+          <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container>
+    
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef >Name</th>
+          <td mat-cell *matCellDef="let row">{{row.name}}</td>
+        </ng-container>
+    
+        <!-- Name Ações -->
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef >Action</th>
+            <td mat-cell *matCellDef="let row">
+              <a routerLink="/">
+                <button mat-stroked-button color="primary">views books</button>
+              </a>
+            </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      </table>
+    </div>
+
+</div>
