--- a/src/app/views/category/category-read/category-read.component.css
+++ b/src/app/views/category/category-read/category-read.component.css
@@ -19,3 +19,8 @@
 .button {
     box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
+
+.del {
+    margin-left: .4rem;
+    color: red;
+}
