--- a/src/app/views/category/category-read/category-read.component.html
+++ b/src/app/views/category/category-read/category-read.component.html
@@ -20,10 +20,13 @@
 
       <!-- Name Ações -->
       <ng-container matColumnDef="action">
-        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
           <a routerLink="/category/update/{{ row.id }}">
             <i class="material-icons">edit</i>
+          </a>
+          <a routerLink="/category/delete/{{ row.id }}">
+            <i class="material-icons del">delete</i>
           </a>
         </td>
       </ng-container>
