--- a/src/app/views/category/category-read/category-read.component.html
+++ b/src/app/views/category/category-read/category-read.component.html
@@ -35,7 +35,7 @@
       <ng-container matColumnDef="views">
         <th mat-header-cell *matHeaderCellDef>View</th>
         <td mat-cell *matCellDef="let row">
-          <a routerLink="/">
+          <a routerLink="/category/{{ row.id }}/books">
             <button mat-stroked-button color="primary">view books</button>
           </a>
         </td>
