--- a/src/app/views/book/book-read/book-read.component.html
+++ b/src/app/views/book/book-read/book-read.component.html
@@ -1,1 +1,40 @@
-<p>book-read works!</p>
+<div class="content">
+
+    <button class="button" (click)="navigateToBookCreate()" mat-stroked-button color="primary">add new
+      book</button>
+  
+    <div class="mat-elevation-z8 content-table">
+      <table class="table" mat-table [dataSource]="books">
+  
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef>Id</th>
+          <td mat-cell *matCellDef="let row">{{row.id}}</td>
+        </ng-container>
+  
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Title</th>
+          <td mat-cell *matCellDef="let row">{{row.title}}</td>
+        </ng-container>
+  
+        <!-- Name Ações -->
+        <ng-container matColumnDef="action">
+          <th mat-header-cell *matHeaderCellDef>Actions</th>
+          <td mat-cell *matCellDef="let row">
+            <a routerLink="/">
+              <i class="material-icons">edit</i>
+            </a>
+            <a routerLink="/">
+              <i class="material-icons del">delete</i>
+            </a>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      </table>
+    </div>
+  
+  </div>
