book create implemented

--- a/src/app/views/category/category-read/category-read.component.html
+++ b/src/app/views/category/category-read/category-read.component.html
@@ -1,5 +1,9 @@
 <div class="content">
 
+  <div class="title">
+    <h1>Book Category</h1>
+  </div>
+
   <button class="button" (click)="navigateToCategoryCreate()" mat-stroked-button color="primary">create new
     category</button>
 
