--- a/src/app/views/book/book-read/book-read.component.css
+++ b/src/app/views/book/book-read/book-read.component.css
@@ -5,6 +5,17 @@
     margin-top: 1.4rem;
 }
 
+.title {
+    text-align: center;
+    margin-bottom: 3rem;
+}
+
+.title h1 {
+    font-size: 2rem;
+    color: rgb(99, 98, 98);
+    font-weight: 500;
+}
+
 .content-table {
     margin-top: 1rem;
     width: 100%;
