--- a/src/app/views/book/book-read/book-read.component.html
+++ b/src/app/views/book/book-read/book-read.component.html
@@ -29,7 +29,7 @@
           <a routerLink="/">
             <i class="material-icons">edit</i>
           </a>
-          <a routerLink="/">
+          <a routerLink="/category/{{ category.id }}/books/delete/{{ row.id }}">
             <i class="material-icons del">delete</i>
           </a>
         </td>
