--- a/src/app/views/book/book-read/book-read.component.html
+++ b/src/app/views/book/book-read/book-read.component.html
@@ -26,7 +26,7 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Actions</th>
         <td mat-cell *matCellDef="let row">
-          <a routerLink="/">
+          <a routerLink="/category/{{ category.id }}/books/update/{{ row.id }}">
             <i class="material-icons">edit</i>
           </a>
           <a routerLink="/category/{{ category.id }}/books/delete/{{ row.id }}">
