--- a/src/app/views/book/read-book/read-book.component.html
+++ b/src/app/views/book/read-book/read-book.component.html
@@ -1,1 +1,12 @@
-<p>read-book works!</p>
+<form>
+    <h1>Reading {{ book.title }}</h1>
+    
+    <mat-form-field class="form">
+        <mat-label>Description</mat-label>
+        <textarea class="text" matInput [(ngModel)]="book.description" disabled type="text" name="description" placeholder="Ex. In this book..."></textarea>
+    </mat-form-field>
+    
+    <div class="buttons">
+        <button mat-stroked-button (click)="close()" color="primary">Close</button>
+    </div>
+</form>
