--- a/src/app/components/templates/header/header.component.html
+++ b/src/app/components/templates/header/header.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar class="header mat-elevation-z6">
     <span>
-        <a>
+        <a routerLink="{{ routeUrl }}">
             <i class="material-icons
             ">
-                home
+                {{ icon }}
             </i>
-            My Bookstore
+            {{ title }}
         </a>
     </span>
 </mat-toolbar>
